--- a/06_dom/two.html
+++ b/06_dom/two.html
@@ -24,6 +24,13 @@
         
     }
 
-    console.log()
+    parent.children[1].style.color='blue';
+    console.log(parent.firstElementChild.innerHTML);
+    console.log(parent.lastElementChild.innerHTML);
+
+    const dayOne = document.querySelector('.days')
+    console.log(dayOne);
+    console.log(dayOne.parentElement);
+    console.log(dayOne.nextElementSibling.innerHTML);
 </script>
 </html>
